@startuml
interface Parcelable {
    + constructor(Parcel)
    + writeToParcel(Parcel, Int)
    + describeContents(): Int
    + companion object CREATOR
}


class VKAttachments {
    + type: Sting
    + photo: List<VKSize>?
    + link: VKLink?
    + attachmentId: Int
    + wallParentAttachments: Int
    + parse(JSONObject): VKAttachments
}


class VKSourceModel {
    + id: Int
    + name: String
    + photo_100: String
    + VKSourceModel
    + parseGroup(JSONObject): VKSourceModel
    + parseProfile(JSONObject): VKSourceModel
}

class VKLink {
    + url: String
    + title: String
    + caption: String
    + photo: List<VKSize>?
    + linkId: Int
    + wallParentLink: Int
    + parse(JSONObject): VKLink
}

class VKNewsModel {
    + items: ArrayList<VKWallPostModel>
    + sources: ArrayList<VKSourceModel>
    + next_from: String?
    + parse(JSONObject): VKNewsModel
    + parseCopyHistory(JSONObject): VKNewsModel
    + parseSearchWallPost(JSONObject): VKNewsModel
    - getAttachments(JSONObject): ArrayList<VKAttachments>?
}

class VKSize {
    + type: String
    + url: String
    + width: Int
    + height: Int
    + sizeId: Int
    + wallParentSize: Int
    + parse(JSONObject): VKSize
}


class VKWallPostModel {
    + post_id: Int
    + source_id: Int
    + date: Long
    + text: String
    + reply_post_id: Int
    + attachments: ArrayList<VKAttachments>?
    + topic_id: Int
    + isSaved: Boolean
}

class VKSearchModel{
    + items: ArrayList<VKWallPostModel>
    + sources: List<VKSourceModel>
    + next_from: String
    + total_count: Int
    + parse(JSONObject): VKSearchModel
}



VKLink --left> VKAttachments
VKSourceModel --o VKNewsModel
VKWallPostModel --o VKNewsModel
VKSize --o VKLink
VKSize --o VKAttachments
VKAttachments --o VKWallPostModel

VKAttachments ..|> Parcelable
VKSourceModel ..|> Parcelable
VKLink ..|> Parcelable
VKNewsModel ..|> Parcelable
VKWallPostModel ..left|> Parcelable
VKSize ..|> Parcelable

VKWallPostModel --o VKSearchModel
VKSourceModel --o VKSearchModel

@enduml